--- a/css/styles.css
+++ b/css/styles.css
@@ -217,21 +217,27 @@ h3 {
    .camisa{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        margin: 0 auto;
         column-gap: 2rem;
+        max-width: 120rem;
+        width: 95%;
    }
 }
 
-.formulario {
+    .formulario {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap:  2rem;
 }
+
+  
+
 .formulario__campo {
     border: 1rem solid var(--primarioOscuro);
     background-color: var(--primario);
     color: var(--blanco);
-    font-size: 2rem;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 2rem;
     padding: 1rem;
     appearance: none;
 }
@@ -240,6 +246,7 @@ h3 {
     border: none;
     font-size: 2rem;
     font-family: var(--fuentePrincipal);
+    margin: 2rem;
     padding: 2rem;
     transition: background-color .3s ease;
     grid-column: 1 / 3;
